2008-04-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-mode-map): Use abbrev-table-menu.
	(python-use-skeletons): Remove, unused.
	(python-skeletons): Remove.  Use the abbrev table instead.
	(python-mode-abbrev-table): Fix regexp; add enable-function and case-fixed.
	(def-python-skeleton): Simplify.
	(python-expand-template): Use the abbrev-table and abbrev-insert.
	(python-abbrev-pc-hook, python-abbrev-syntax-table, python-pea-hook):
	Remove.
	(python-mode): Don't set pre-abbrev-expand-hook.

	* skeleton.el: Set coding-tag.

	* abbrev.el (abbrev-insert): New function extracted from expand-abbrev.
	(expand-abbrev): Use it.
	(abbrev-table-menu): New function.

	* abbrev.el (define-abbrev-table): Fontify dosctrings as such.

	* minibuffer.el (completion-table-with-terminator): Fix paren typo.

2008-04-17  Sam Steingold  <sds@gnu.org>

	* pcvs-util.el (cvs-bury-buffer): Use quit-window instead of the
	idiosyncratic bury-buffer/delete-window logic.

2008-04-17  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/crm.el (crm-completion-help, crm-complete)
	(crm-complete-word, crm-complete-and-exit): Fix typo in previous change.

2008-04-17  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Don't make the width of U+00AD to 0.

2008-04-17  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-stack-update): New variable.
	(gdb, gdb-starting, gdb-frames-mode): Use it.
	(gdb-invalidate-frames): Advise to call "info stack" only if
	execution has occurred.
	(gdb-info-breakpoints-custom): Only update overlay-arrow pointing to
	selected frame if no execution has occurred.
	(gdb-frames-force-update): New interactive function.
	(gdb-frames-mode-map): Bind it to "F".

2008-04-17  Michael Olson  <mwolson@gnu.org>

	* textmodes/remember.el (remember-version): Release Remember 2.0.

2008-04-16  Yoni Rabkin  <yoni@rabkins.net>

	* textmodes/artist.el:
	* progmodes/vhdl-mode.el:
	* progmodes/verilog-mode.el: