@@ -1,3 +1,8 @@
+2008-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/debug.el (debug): Revert to bury-buffer since quit-window
+	is not better anyway.
+
 2008-04-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/python.el (python-mode-map): Use abbrev-table-menu.
